优化多语言组件，切换语言时，使 URL 中带有语言代码

--- a/apps/web/locales/en.json
+++ b/apps/web/locales/en.json
@@ -3,7 +3,7 @@
     "title": "Hello world!"
   },
   "pricing": {
-    "title":"Hello world!"
+    "title":"Hello world! en"
   },
   "blog": {
     "title": "blog page"
