--- a/apps/web/locales/es.json
+++ b/apps/web/locales/es.json
@@ -3,7 +3,7 @@
     "title": "Hello world!"
   },
   "pricing": {
-    "title":"Hello world de!"
+    "title":"Hello world! es"
   },
   "blog": {
     "title": "blog page"
