--- a/apps/web/locales/en.json
+++ b/apps/web/locales/en.json
@@ -9,7 +9,8 @@
     "title": "blog page"
   },
   "faq": {
-    "title": "faq page"
+    "title": "Frequently asked questions",
+    "description": "Do you have any questions? We have got you covered."
   },
   "common": {
     "menu": {
