调整 apps/web 下的页面结构和 modules 下的组件结构

--- a/apps/web/locales/en.json
+++ b/apps/web/locales/en.json
@@ -1,4 +1,13 @@
 {
+  "auth": {
+    "continueWithProvider": "Continue with {provider}",
+    "signup": {
+      "signIn": "Sign in",
+      "submit": "Create account",
+      "title": "Create an account",
+      "message": "We are happy that you want to join us. Please fill in the form below to create your account."
+    }
+  },
   "landing": {
     "title": "Hello world!"
   },
